--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Generator</title>
     <link rel="stylesheet" href="output.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
-<body>
-    
+<body class="h-screen flex bg-gray-900">
+    <div class="border border-white rounded-md bg-slate-900  text-white md:m-auto md:w-[35%] m-2 text-center md:px-20 px-10 w-full h-fit mt-[40%] py-5 ">
+        <h1 class="text-3xl mb-5">Password Generator</h1>
+        <input type="text" placeholder="click on Generate button" disabled id="password-show" class="w-full px-2 mr-10 text-lg rounded-md focus:border-none bg-white" >
+        <div class="mt-8 mb-10 flex gap-1 justify-center ">
+            <button id="generate-btn" class="bg-indigo-500 px-5 py-1 rounded-sm font-semibold transition-all ease-in-out duration-500 hover:bg-indigo-600">Generate</button>
+            <button id="copy-btn" class="bg-indigo-500 px-4 py-1 rounded-sm font-semibold transition-all ease-in-out duration-500 hover:bg-indigo-600">Copy To Clipboard</button>
+        </div>
+
+        <div class="flex justify-between content-center">
+            <label for="ps-length" class="text-lg font-semibold">Password Length</label>
+            <input type="number" id="ps-length" max="20" min="0" class="bg-transparent text-white border border-white w-16 rounded-sm font-semibold focus:border-none">
+        </div>
+        <div class="flex justify-between items-center my-2">
+            <label for="uppercase-check" class="text-lg font-semibold cursor-pointer">Include uppercase letters</label>
+            <input type="checkbox"  id="uppercase-check" class="cursor-pointer">
+        </div>
+        <div class="flex justify-between items-center my-2">
+            <label for="lower-check" class="text-lg font-semibold cursor-pointer">Include lowercase letters</label>
+            <input type="checkbox"  id="lower-check" class="cursor-pointer">
+        </div>
+        <div class="flex justify-between items-center my-2">
+            <label for="number-check" class="text-lg font-semibold cursor-pointer">Include numbers</label>
+            <input type="checkbox"  id="number-check" class="cursor-pointer">
+        </div>
+        <div class="flex justify-between items-center my-2">
+            <label for="symbol-check" class="text-lg font-semibold cursor-pointer">Include symbols</label>
+            <input type="checkbox"  id="symbol-check" class="cursor-pointer">
+        </div>
+    </div>
 </body>
 </html>
