--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body class="h-screen flex bg-gray-900">
     <div class="border border-white rounded-md bg-slate-900  text-white md:m-auto md:w-[35%] m-2 text-center md:px-20 px-10 w-full h-fit mt-[40%] py-5 ">
         <h1 class="text-3xl mb-5">Password Generator</h1>
-        <input type="text" placeholder="click on Generate button" disabled id="password-show" class="w-full px-2 mr-10 text-lg rounded-md focus:border-none bg-white" >
+        <input type="text" placeholder="click on Generate button" disabled id="password-show" class="w-full px-2 mr-10 text-lg text-black rounded-md focus:border-none bg-white" >
         <div class="mt-8 mb-10 flex gap-1 justify-center ">
             <button id="generate-btn" class="bg-indigo-500 px-5 py-1 rounded-sm font-semibold transition-all ease-in-out duration-500 hover:bg-indigo-600">Generate</button>
             <button id="copy-btn" class="bg-indigo-500 px-4 py-1 rounded-sm font-semibold transition-all ease-in-out duration-500 hover:bg-indigo-600">Copy To Clipboard</button>
@@ -38,4 +38,5 @@
         </div>
     </div>
 </body>
+<script src="script.js"></script>
 </html>
